[gd_scene load_steps=8 format=4 uid="uid://4egctnsul12p"]

[ext_resource type="TileSet" uid="uid://barvov7l180li" path="res://scenes/levels/level_1/tile_set_l1.tres" id="1_3wwml"]
[ext_resource type="Script" uid="uid://ccsg4d2avgx5e" path="res://scripts/level_1/level_p_1_room_4.gd" id="1_tfesf"]
[ext_resource type="PackedScene" uid="uid://b32efwi1xc15v" path="res://scenes/players/player_1.tscn" id="2_ewav7"]
[ext_resource type="PackedScene" uid="uid://8gxspjislm52" path="res://scenes/levels/level_1/interact_sparkle.tscn" id="3_ewav7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ewav7"]
size = Vector2(41, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfesf"]
size = Vector2(36, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1enu"]
size = Vector2(32, 54)

[node name="level_p1_room_4" type="Node2D"]
script = ExtResource("1_tfesf")

[node name="background_ l1" type="ColorRect" parent="."]
offset_left = -809.0
offset_top = -336.0
offset_right = 2176.0
offset_bottom = 1976.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="room_r4_l1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQAA0AAAABAAIAAAAQAAwAAAABAAIAAAAPAAsAAAABAAIAAAAQAAsAAAABAAIAAAARAAsAAAABAAIAAAAOAAsAAAABAAIAAAASAAsAAAABAAIAAAASAAoAAAABAAIAAAARAAoAAAABAAIAAAAQAAoAAAABAAIAAAAPAAoAAAABAAIAAAAOAAoAAAABAAIAAAANAAoAAAABAAIAAAANAAkAAAABAAIAAAANAAgAAAABAAIAAAANAAcAAAABAAIAAAAOAAcAAAACAAIAAAAPAAcAAAACAAAAAAAOAAYAAAACAAEAAAASAAYAAAAAAAEAAAANAAYAAAABAAIAAAAOAAUAAAACAAQAAAAPAAUAAAACAAUAAAARAAUAAAAAAAUAAAASAAUAAAAAAAQAAAATAAYAAAABAAIAAAATAAcAAAABAAIAAAATAAgAAAABAAIAAAATAAkAAAABAAIAAAATAAoAAAABAAIAAAASAAkAAAABAAIAAAARAAkAAAAAAAMAAAAQAAkAAAABAAEAAAAPAAkAAAACAAMAAAAOAAkAAAABAAIAAAAOAAgAAAACAAMAAAAPAAgAAAACAAIAAAAQAAgAAAABAAAAAAARAAgAAAAAAAIAAAASAAgAAAAAAAMAAAASAAcAAAAAAAIAAAARAAcAAAAAAAAAAAAPAAQAAAACAAQAAAAQAAQAAAABAAUAAAARAAQAAAAAAAQAAAAMAAkAAAABAAIAAAAMAAgAAAABAAIAAAAMAAcAAAABAAIAAAAMAAYAAAABAAIAAAAUAAkAAAABAAIAAAAUAAgAAAABAAIAAAAUAAcAAAABAAIAAAAUAAYAAAABAAIAAAATAAUAAAABAAIAAAANAAUAAAABAAIAAAAMAAUAAAABAAIAAAAOAAQAAAABAAIAAAAOAAMAAAABAAIAAAAPAAMAAAABAAIAAAAQAAMAAAABAAIAAAARAAMAAAABAAIAAAASAAMAAAABAAIAAAASAAQAAAABAAIAAAATAAQAAAABAAIAAAAUAAUAAAABAAIAAAAOAAEAAAABAAIAAAAOAAIAAAABAAIAAAAPAAEAAAABAAIAAAAPAAIAAAABAAIAAAAQAAEAAAABAAIAAAAQAAIAAAABAAIAAAARAAEAAAABAAIAAAARAAIAAAABAAIAAAASAAEAAAABAAIAAAASAAIAAAABAAIAAAATAAIAAAABAAIAAAATAAMAAAABAAIAAAAUAAMAAAABAAIAAAAUAAQAAAABAAIAAAANAAEAAAAAAAMAAAATAAEAAAACAAMAAAAUAAIAAAACAAMAAAAVAAMAAAACAAMAAAANAAQAAAABAAIAAAANAAIAAAABAAIAAAANAAMAAAABAAIAAAAMAAMAAAABAAIAAAAMAAQAAAABAAIAAAAMAAIAAAAAAAMAAAALAAMAAAAAAAMAAAAQAAAAAAABAAIAAAARAAAAAAACAAMAAAASAAAAAAABAAEAAAAPAAAAAAAAAAMAAAAOAAAAAAABAAEAAAANAAAAAAAAAAIAAAATAAAAAAACAAIAAAAQAA4AAAABAAIAAAARAAwAAAABAAIAAAASAAwAAAABAAIAAAAPAAwAAAABAAIAAAAOAAwAAAABAAIAAAANAAsAAAABAAIAAAAMAAoAAAABAAIAAAATAAsAAAABAAIAAAAUAAoAAAABAAIAAAALAAkAAAABAAIAAAALAAgAAAABAAIAAAALAAcAAAABAAIAAAALAAYAAAABAAIAAAALAAUAAAABAAIAAAALAAQAAAABAAIAAAAVAAQAAAABAAIAAAAVAAUAAAABAAIAAAAVAAYAAAABAAIAAAAVAAcAAAABAAIAAAAVAAgAAAABAAIAAAAVAAkAAAABAAIAAAARAA0AAAACAAQAAAAPAA0AAAAAAAQAAAAPAA4AAAAAAAEAAAARAA4AAAACAAEAAAASAA0AAAABAAUAAAAOAA0AAAABAAUAAAANAAwAAAAAAAQAAAAMAAsAAAAAAAQAAAATAAwAAAACAAQAAAAUAAsAAAACAAQAAAATAA0AAAACAAUAAAAUAAwAAAACAAUAAAAVAAsAAAACAAUAAAANAA0AAAAAAAUAAAAMAAwAAAAAAAUAAAALAAsAAAAAAAUAAAAKAAkAAAAAAAEAAAAKAAgAAAAAAAQAAAAKAAcAAAABAAIAAAAKAAYAAAAAAAMAAAAKAAUAAAAAAAIAAAAKAAQAAAAAAAEAAAAWAAgAAAACAAEAAAAWAAcAAAACAAEAAAAWAAYAAAACAAEAAAAWAAUAAAACAAEAAAAWAAQAAAACAAEAAAAJAAcAAAABAAIAAAAIAAcAAAABAAIAAAAJAAUAAAABAAAAAAAJAAYAAAABAAEAAAAIAAUAAAABAAAAAAAIAAYAAAABAAEAAAAJAAgAAAABAAUAAAAIAAgAAAABAAUAAAALAAoAAAAAAAQAAAAKAAoAAAAAAAUAAAAWAAoAAAACAAUAAAAVAAoAAAACAAQAAAAWAAkAAAACAAEAAAAQAP//AAABAAIAAAARAP//AAACAAIAAAAPAP//AAAAAAIAAAAUAAEAAAACAAIAAAAVAAIAAAACAAIAAAALAAIAAAAAAAIAAAAMAAEAAAAAAAIAAAAOAP//AAABAAAAAAASAP//AAABAAAAAAANAP//AAAAAAAAAAAMAAAAAAAAAAAAAAALAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAATAP//AAACAAAAAAAUAAAAAAACAAAAAAAVAAEAAAACAAAAAAAWAAIAAAACAAAAAAAWAAMAAAACAAEAAAAKAAMAAAAAAAEAAAA=")
tile_set = ExtResource("1_3wwml")

[node name="deco_r4_l1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUAAMAAAAJAAEAAAAUAAEAAAAOAAAAAAAUAAIAAAAMAAIAAAAVAAQAAAAJAAEAAAASAAQAAAAKAAEAAAAVAAYAAAAKAAEAAAALAAMAAAALAAEAAAALAAIAAAAJAAMAAAANAAIAAAAKAAEAAAAOAAAAAAAJAAEAAAAQAAkAAQAAAAAAAAATAAgAAAAKAAEAAAAVAAkAAAAJAAEAAAAUAAkAAAAKAAEAAAA=")
tile_set = ExtResource("1_3wwml")

[node name="interact_sparkle" parent="." instance=ExtResource("3_ewav7")]
position = Vector2(689, 230)

[node name="player1" parent="." instance=ExtResource("2_ewav7")]
position = Vector2(527, 364)

[node name="leave_to room2" type="Area2D" parent="."]
position = Vector2(529, 460)

[node name="Collision1" type="CollisionShape2D" parent="leave_to room2"]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_ewav7")

[node name="leave_to room5" type="Area2D" parent="."]

[node name="Collision2" type="CollisionShape2D" parent="leave_to room5"]
position = Vector2(528, -18.5)
shape = SubResource("RectangleShape2D_tfesf")

[node name="leave_to room6" type="Area2D" parent="."]

[node name="Collision3" type="CollisionShape2D" parent="leave_to room6"]
position = Vector2(272, 232)
shape = SubResource("RectangleShape2D_s1enu")

[connection signal="body_entered" from="leave_to room2" to="." method="_on_leave_to_room_2_body_entered"]
[connection signal="body_entered" from="leave_to room5" to="." method="_on_leave_to_room_5_body_entered"]
[connection signal="body_entered" from="leave_to room6" to="." method="_on_leave_to_room_6_body_entered"]
